kubernetes/applications/bridges/esphome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/part-of: bridges
