kubernetes/applications/bridges/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/part-of: bridges
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: esphome

  ports:
    - name: http
      port: 6052
      targetPort: http
      protocol: TCP
