kubernetes/applications/bridges/esphome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/part-of: bridges
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway

  hostnames:
    - esphome.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: esphome
          port: 6052
          weight: 1
